[project]
name = "uv-torch-base"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "albumentations>=2.0.5",
    "click>=8.1.8",
    "editables>=0.5",
    "fastparquet>=2024.11.0",
    "hatchling>=1.25.0",
    "huggingface-hub>=0.29.3",
    "hydra-core>=1.3.2",
    "kagglehub>=0.3.10",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "packaging>=24.1",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66.5",
    "transformers>=4.49.0",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
]

# [project.optional-dependencies]
# build = ["torch==2.5.0+cu121", "setuptools", "packaging"]
# compile = ["flash-attn"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
# no-build-isolation-package = ["flash-attn"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  "B008", # tmp
  "E501", # Line too long (115 > 100)
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
